added destroy button

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,9 @@
     <% @all_posts.each do |p| %>
       <li><%= p.comment %><br>
           <span class="timestamp"><%= p.created_at%></span>
+          <span class="delete">
+            <%= link_to 'Destroy', p, method: :delete, data: {confirm: 'Are you sure?' } %>
+          </span>
       </li>
     <% end %>
   </ul>
