--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,6 +6,11 @@ $purple: #6B80D7;
 $off-white: #fafafa;
 $text-gray: #333333;
 
+// breakpoints:
+$phone: 640px;
+$tablet: 768px;
+$desktop: 1024px;
+
 * {
   margin: 0;
   font-family: 'Menlo';
@@ -19,6 +24,13 @@ header {
   width: 100%;
   border-bottom: 4px solid $purple;
   background-color: $purple;
+
+  @media (max-width: $phone) {   //and (max-width: 1023px)
+    width: 100%;
+    text-align: center;
+    padding: 10px 0 5px 0;
+    margin: 0;
+  }
 }
 
 .error {
@@ -34,6 +46,12 @@ header {
   padding-left: 20px;
   color: $text-gray;
 
+  @media (max-width: $phone) {   //and (max-width: 1023px)
+    width: 100%;
+    text-align: center;
+    padding: 10px 0 5px 0;
+  }
+
   h4 {
     padding-left: 4px;
     color: darken($off-white, 48%);
@@ -48,6 +66,10 @@ header {
     border: none;
     border-radius: 10px;
     background-color: $off-white;
+
+    @media (max-width: $phone) {
+      max-width: 360px;
+    }
   }
 
   .btn {
@@ -61,6 +83,9 @@ header {
     background-color: $purple;
     border: 1px solid $purple;
 
+    @media (max-width: $phone) {
+      max-width: 360px;
+    }
   }
 
   .rails-btn {
@@ -74,6 +99,10 @@ header {
     list-style: none;
     padding: 10px;
     color: $text-gray;
+
+    @media (max-width: $phone) {
+      text-align: left;
+    }
 
     li {
       margin-bottom: 12px;
