--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -85,6 +85,15 @@ header {
 
     @media (max-width: $phone) {
       max-width: 360px;
+
+      &::after {
+        content: "Create";
+        color: $off-white;
+        font-size: 1.5em;
+        position: fixed;
+        padding-top: 2px;
+        right: 170px;
+      }
     }
   }
 
@@ -93,6 +102,11 @@ header {
     font-size: 1.5em;
     color: $off-white;
     background-color: $purple;
+
+    @media (max-width: $phone) {
+      display: inline;
+      opacity: 0;
+    }
   }
 
   ul {
