--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_area :comment, :class => "text-box" %>
     </div>
     <div class="actions">
-      <button class="btn"><%= f.submit "Create", class: "rails-btn" %></button>
+    <%= f.submit "Create", class: "btn btn-primary rails-btn" %>
     </div>
   <% end %>
   <ul class="posts">
