--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,9 +17,8 @@
   <ul class="posts">
     <% @all_posts.each do |p| %>
       <li><%= auto_link(p.comment) %><br>
-
         <% if current_user == p.user %>
-          <span class="user">posted by <span id="user-post">me</span>
+          <span class="user">posted by <span id="user-post"><%= link_to 'me', p.user %></span>
           <span class="timestamp">on <%= p.created_at%></span></span>
           <span class="delete">
             <%= link_to 'delete', p, method: :delete, data: {confirm: 'Are you sure you want to delete this post?' } %>
@@ -29,7 +28,7 @@
           <span class="user">
             posted
             <% unless p.user.nil? %>
-              by <%= p.user.first_name.capitalize.strip %>
+              by <%= link_to p.user.username.strip, p.user %>
             <% end %>
             <span class="timestamp">
               on <%= p.created_at%>
