--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,12 @@
 <div class="container-fluid container-user">
   <div class="user-img-about">
-    <%= image_tag ("profile.png"), class:"col-md-4" %>
+    <%= image_tag ("profile.png") %>
     <div class="user-about">
       <h1 class="user-name"><%= @user.username %></h1>
-      <h3 class="user-num-posts">Number of posts: <%= @posts.length %></h3>
-      <h3 class="user-joined">Joined on: <%= @user.created_at %></h3>
+      <h3 class="user-followers"><%= @user.followers.count %> followers</h1>
+      <h3 class="user-following"><%= @user.following.count %> following</h1>
+      <h3 class="user-num-posts"><%= @posts.count %> posts</h3>
+      <h3 class="user-joined">Joined on: <%= @user.created_at.to_formatted_s(:date) %></h3>
     </div>
   </div>
   <div class= "container-posts">
@@ -14,7 +16,7 @@
 
           <% if current_user == @user %>
             <span class="user">posted by <span id="user-post">me</span>
-            <span class="timestamp">on <%= post.created_at%></span></span>
+            <span class="timestamp">on <%= post.created_at %></span></span>
             <span class="delete">
               <%= link_to 'delete', post, method: :delete, data: {confirm: 'Are you sure you want to delete this post?' } %>
             </span>
