made follows page and added gravatars

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
     <% if logged_in? %>
       <ul class="nav nav-pills navbar-right">
         <li class="nav-name" data-container="body" data-html="true" data-toggle="popover" data-placement="bottom" data-content="Number of posts: <%= current_user.posts.length %>">Hi, <%= current_user.first_name.capitalize %>!</li>
+        <li class="nav-action"><%= link_to "Profile", current_user %></a></li>
         <li class="nav-action"><%= link_to "Log out", logout_path, method: "delete" %></li>
       </ul>
 
