--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -34,11 +34,11 @@ input[type=button] {
 .container-user {
 
   .user-img-about {
-    width: 100%;
     @include displayFlex;
     @include flexDirection(row);
 
     img {
+      // width: 160px;
       margin: 20px 20px 40px 20px;
     }
     .user-about {
@@ -62,15 +62,100 @@ input[type=button] {
         color: #aaa;
       }
 
-      #following,
-      #followers {
-        font-weight: 400;
+      .follow-btn,
+      .unfollow-btn {
+        margin-top: 10px;
+        border-radius: 4px;
       }
 
+      .follow-btn {
+        background-color: $purple;
+        border-color: $purple;
+        &:hover {
+          background-color: $green;
+          border-color: $green;
+        }
+      }
+      .unfollow-btn {
+        &:hover {
+          background-color: lighten(#aaa, 20%);
+          border-color: lighten(#aaa, 20%);
+        }
+      }
     }
   }
+}
+
+.container-follow {
+  width: 100%;
+  @include displayFlex;
+  @include flexDirection(row);
+
+  .user-about {
+    @include displayFlex;
+    @include flexDirection(row);
+
+    .user-img-about {
+      margin: 20px 20px 0 20px;
+    }
+
+    .user-info {
+      padding-left: 0;
+
+      .username {
+        font-size: 26px;
+        color: $text-gray;
+        margin-top: 20px;
+        margin-bottom: 5px;
+      }
+      .user-num-posts {
+        margin: 5px 0 0 0;
+        padding: 0;
+        font-size: 14px;
+        color: #aaa;
+      }
+    }
+
+  }
+
+  .follows {
+    // border: 1px solid red;
+    width: 100%;
+    margin-left: 160px;
+    @include displayFlex;
+    @include flexDirection(column);
+    @include flexAlignItems(flex-end);
+
+    .follows-wrap {
+      // border: 1px solid blue;
+      width: 100%;
+    }
+
+    h3 {
+      margin: 20px 0 40px 40px;
+      color: $text-gray;
+      text-align: left;
+      font-size: 32px;
+      font-weight: 700;
+    }
+
+    .follow-li {
+      list-style: none;
+      margin: 0 30px 10px 0;
+      padding-bottom: 10px;
+      border-bottom: 1px solid lighten(#aaa, 20%);
 
 
+      img {
+        width: 120px;
+        padding-right: 10px;
+      }
+
+      span a{
+        font-size: 16px;
+      }
+    }
+  }
 }
 
 .posts {
